Fix: adjust position of header elements so that they align as intended for smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,11 @@
   padding: 0;
 }
 
-.row {
+header {
+  max-width: 940px;
+}
+
+.header-fluid {
   padding: 0;
   margin: 0;
 }
@@ -16,6 +20,6 @@
   max-height: 60px;
 }
 
-header {
-  max-width: 940px;
+.site-name {
+  text-align: center;
 }
